Change History
==============

1.7b7 unreleased
----------------

- Eradicate rounded corners in quick edit toolbox.
  General quick editor style cleanup.
  [smcmahon]

- Updated Catalan (ca) and Spanish (es) translation
  [arielvb]

- Fixed a test that changed the working directory, but failed to change it
  back to the original. This was resulting in zero test results when using
  collective.xmltestreport. [pumazi]

- Added dependencies Plone and Products.Archetypes.
  [pumazi]

- Created the test extra requirement to pull in collective.funkload for tests.
  [pumazi]

- Updated basque (eu) translation
  [erral]

- Provide compatibility with DateTime 3.
  [hannosch]

1.7b6 2011-10-17
----------------

- Declare dependency on CMFCore's configuration to make sure that its 
  permissions are loaded early enough in Plone 4.1.
  [davisagli]

- Grant the Site Administrator role most of the PloneFormGen-related permissions
  by default.
  [davisagli]

- More accurately identify validation errors in Google Analytics tracking.
  [yomatters]

- Re-add ability to override edit macros like for other Archetypes content types
  (Megaphone relies on this).
  [davisagli]

- change i18n domain of quickedit template from plone to ploneformgen
  [toutpt]

- locales rebuild & update french translations
  [toutpt]

1.7b5 2011-07-03
----------------

- Disable right and left columns in QuickEdit.
  [smcmahon]

- Fix to problem viewing form fields independently was inadequate if prologue
  or epilogue actually existed. Thanks, Eggert Ehmke.
  [smcmahon]

1.7b4 2011-06-16
----------------

- Move fieldset markers into a separate part of quickedit toolbox.
  [smcmahon]

- Fix popen2 deprecation warning by using subprocess
  [toutpt]

1.7b3 2011-06-14
----------------

- Add fieldset begin/end markers; these will replace fieldset folders going
  forward so that fieldsets may work better with the quickeditor. Fieldset
  folders will still work, but will not be addable by default.